single page app wordpress

--- a/lander-style.css
+++ b/lander-style.css
@@ -1,68 +1,10 @@
-/* 
-Theme name: Lander page for Simone
-Description: Child theme for a single page application
-Author: Vadim Volovodovskiy
-Version: 0.1
-Template: simone
-*/
-
-@import url('../simone/style.css');
-
-.main-navigation.sticky-header {
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-    top: 0;
-    left: 0;
-}
-
-.shifted {
-    margin-top: 54px;
-}
-
-@media screen and (max-width: 1539px) and (min-width: 1160px) {
-	.contact-area-lander-page {
-		margin-left: 0;
-		margin-right: 0;
-		background: #fff;
-	}
-	.indent {
-		max-width: 1000px;
-		margin: 0 auto;
-	}
-}
-
-@media screen and (max-width: 725px) {	
-	.indent {
-		max-width: 325px;
-		margin: 0 auto;
-	}
-}
-
-.front-left,
-.front-right {
-	width: 100%;
-	float: none;
-	padding: 0;
-}
-
-@media screen and (min-width: 725px) {	
-	.front-left {
-		width: 55%;
-		float: left;
-		padding-right: ;
-	}
-	.front-right {
-		width: 45%;
-		float: right;
-		padding-left: 4rem;
-		text-align: left; 
-	}
-}
-
-.site-content {
+.content-area {
 	background: #fff;
 /*	background: hsl(0, 0%, 100%);*/
+}
+
+#content.site-content {
+	display: none;
 }
 
 #call-to-action {
@@ -75,11 +17,10 @@ Template: simone
 
 #testimonials {
 	padding: 4rem 0;
-	background: lightgray;
+	background: hsl(0, 0%, 100%);
 }
 
 #services {
-	background: #fff;
 	padding: 4rem 0;
 }
 
@@ -90,16 +31,6 @@ Template: simone
 
 #contact {
 	padding: 4rem 0;
-/*	background: fff;*/
-}
-
-#comments, h1.entry-title {
-	display: none;
-}
-
-.entry-content {
-	padding: 20px;
-	margin: 0 auto;
 }
 
 /* TESTIMONIALS */ 
@@ -191,4 +122,3 @@ Template: simone
     }
 }
                 
-
